added vendor prefixes

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,10 @@
 header {
   background: #d0d0ff;
-  color: #006000;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 /*# sourceMappingURL=style.css.map */
