--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,4 +1,6 @@
 header {
     background: #d0d0ff;
-    color: #006000;
+    // color: #006000;
+    display: flex;
+    justify-content: center;
 }
