--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,8 @@ header {
       -ms-flex-pack: center;
           justify-content: center;
 }
+
+header button, .contact button {
+  background: #0080ff;
+}
 /*# sourceMappingURL=style.css.map */
