--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,6 +1,12 @@
+$primaryBtn : #0080ff;
+
 header {
     background: #d0d0ff;
     // color: #006000;
     display: flex;
     justify-content: center;
+}
+
+header button, .contact button {
+    background: $primaryBtn;
 }
