--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,18 +1,6 @@
-$primaryBtn : #0080ff;
-$btnHoverColor: #00c0ff;
 
-header {
-    background: #d0d0ff;
-    // color: #006000;
-    display: flex;
-    justify-content: center;
-    button {
-        background: $primaryBtn;
-        &:hover {
-            background: $btnHoverColor;
-        }
-    }
-}
+@import './variables';
+@import './header';
 
 .contact {
     button {
