--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -1,8 +1,17 @@
-header {
-    background: #d0d0ff;
-    // color: #006000;
+@mixin flexCenter($direction) {
     display: flex;
     justify-content: center;
+    align-items: center;
+    flex-direction: $direction;
+}
+
+header {
+
+    @include flexCenter(column);
+
+    background: #d0d0ff;
+    height: 80vh;
+    
     button {
         background: $primaryBtn;
         &:hover {
