--- a/styles/style.scss
+++ b/styles/style.scss
@@ -3,6 +3,9 @@
 @import './header';
 
 .contact {
+
+    @include flexCenter(row);
+
     button {
         background: $primaryBtn;
         &:hover {
