mixins with variables

--- a/styles/style.css
+++ b/styles/style.css
@@ -38,6 +38,7 @@ header button:hover {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+  background: #d0ffd0;
 }
 
 .contact button {
