--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -1,15 +1,16 @@
-@mixin flexCenter($direction) {
+@mixin flexCenter($direction, $background) {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: $direction;
+    background: $background;
 }
 
 header {
 
-    @include flexCenter(column);
+    @include flexCenter(column, #d0d0ff);
 
-    background: #d0d0ff;
+    // background: ;
     height: 80vh;
     
     button {
