--- a/styles/style.css
+++ b/styles/style.css
@@ -49,7 +49,11 @@ header button:hover {
   background: #00c0ff;
 }
 
-.contact .info h2::after {
+.contact .info h2, .contact .info p {
+  text-decoration: underline;
+}
+
+.contact .info h2::after, .contact .info p::after {
   content: ":";
 }
 /*# sourceMappingURL=style.css.map */
